Android NDK ChangeLog:

-------------------------------------------------------------------------------
android-1.5_r1 released.